2010/06/15
    Added HAVE_SHUTDOWN_CONNECTION #define, so we can use gwlib.a without
    patching.

2010/06/07
    First repository release of smppbox standalone.
    Some configuration options have been changed from the downloaded version:

    - bearerbox-port added which replaces the smsbox-port in group = core
    - bearerbox-host existed already but was not taken into account. It is now.
    - global-sender removed (was not used)